--- a/ldg_pg_sass/_hero.scss
+++ b/ldg_pg_sass/_hero.scss
@@ -7,9 +7,10 @@
 
   @media (max-width: 481px) {
     flex-direction: column;
-    border: 1px solid red;
     padding: 1rem;
-    margin-top: 60px;
+    margin-top: 0px;
+    z-index: -10;
+    position: relative;
   }
 
   .text-wrapper {
@@ -21,6 +22,12 @@
       font-weight: 700;
       color: #091e42;
       line-height: 57.6px;
+      z-index: -100;
+
+      @media (max-width: 481px){
+        font-size: 32px;
+        line-height: 38.4px;
+      }
     }
 
     p {
@@ -28,6 +35,12 @@
       line-height: 24px;
       color: #344563;
       margin-top: 36px;
+
+      @media (max-width:481px) {
+        font-size: 14px;
+        line-height: 20px;
+        margin-top: 24px;
+      }
     }
   }
 
